tests/toylang/neg/001390_mutation.toylang
program a = { var a : bool int; } .
